# UChat

./: README.md
backend/query/: Cargo.toml
frontend/src/: app.rs  elements.rs  main.rs  tailwind.css
frontend/src/elements/: keyed_notification_box.rs
frontend/src/page/: register.rs
shared/domain/: Cargo.toml
shared/domain/src/: lib.rs  user.rs
