[package]
name = "uchat_domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nutype = { version = "0.4.2", features = ["serde"] }
once_cell = "1"
regex = "1"
serde = { version = "1.0.200", features = ["derive"] }
thiserror = "1"
uuid = { version = "1.8.0", features = ["v4", "serde", "js"] }
diesel-derive-newtype = {version = "2.1.2", optional = true}

[dependencies.diesel]
version = "2.1.6"
features = ["postgres", "uuid", "chrono", "serde_json", "postgres_backend", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"]
default-features = false
optional = true

[features]
query = ["dep:diesel", "dep:diesel-derive-newtype"]